--- a/FBSDKCoreKit/FBSDKCoreKit.xcodeproj/xcshareddata/xcschemes/FBSDKCoreKit-Dynamic.xcscheme
+++ b/FBSDKCoreKit/FBSDKCoreKit.xcodeproj/xcshareddata/xcschemes/FBSDKCoreKit-Dynamic.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "81B71CFC1D19C87400933E93"
-               BuildableName = "FBSDKCoreKit.framework"
+               BuildableName = "FBSDKCoreKit-Dynamic.framework"
                BlueprintName = "FBSDKCoreKit-Dynamic"
                ReferencedContainer = "container:FBSDKCoreKit.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "81B71CFC1D19C87400933E93"
-            BuildableName = "FBSDKCoreKit.framework"
+            BuildableName = "FBSDKCoreKit-Dynamic.framework"
             BlueprintName = "FBSDKCoreKit-Dynamic"
             ReferencedContainer = "container:FBSDKCoreKit.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "81B71CFC1D19C87400933E93"
-            BuildableName = "FBSDKCoreKit.framework"
+            BuildableName = "FBSDKCoreKit-Dynamic.framework"
             BlueprintName = "FBSDKCoreKit-Dynamic"
             ReferencedContainer = "container:FBSDKCoreKit.xcodeproj">
          </BuildableReference>
