--- a/FBSDKShareKit/FBSDKShareKit.xcodeproj/xcshareddata/xcschemes/FBSDKShareKit_TV-Dynamic.xcscheme
+++ b/FBSDKShareKit/FBSDKShareKit.xcodeproj/xcshareddata/xcschemes/FBSDKShareKit_TV-Dynamic.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8144D8E81D261D2900C8E4AC"
-               BuildableName = "FBSDKShareKit.framework"
+               BuildableName = "FBSDKShareKit-Dynamic.framework"
                BlueprintName = "FBSDKShareKit_TV-Dynamic"
                ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8144D8E81D261D2900C8E4AC"
-            BuildableName = "FBSDKShareKit.framework"
+            BuildableName = "FBSDKShareKit-Dynamic.framework"
             BlueprintName = "FBSDKShareKit_TV-Dynamic"
             ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8144D8E81D261D2900C8E4AC"
-            BuildableName = "FBSDKShareKit.framework"
+            BuildableName = "FBSDKShareKit-Dynamic.framework"
             BlueprintName = "FBSDKShareKit_TV-Dynamic"
             ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
          </BuildableReference>
