--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: objective-c
 os: osx
-osx_image: xcode10
-
-xcode_workspace: FacebookSDK.xcworkspace
 
 env:
   global:
@@ -11,14 +8,19 @@ env:
 matrix:
   include:
   - name: "iOS 12.0"
+    osx_image: xcode10
+    xcode_workspace: FacebookSDK.xcworkspace
     xcode_scheme: BuildAllKits
     xcode_sdk: iphonesimulator12.0
     env: MATRIX_ENV=iOS
   - name: "tvOS 12.0"
+    osx_image: xcode10
+    xcode_workspace: FacebookSDK.xcworkspace
     xcode_scheme: BuildAllKits_TV
     xcode_sdk: appletvsimulator12.0
     env: MATRIX_ENV=tvOS
   - name: "Carthage"
+    osx_image: xcode10
     env: MATRIX_ENV=Carthage
 
 branches:
@@ -39,8 +41,9 @@ before_script:
 script:
 - echo "Did start scripts"
 - echo "Env $SCRIPT_ENV $MATRIX_ENV"
-- if [ "$MATRIX_ENV" = "Carthage" ]; then \
-    carthage build --no-skip-current \
+- |
+  if [ "$MATRIX_ENV" = Carthage ]; then
+    carthage build --no-skip-current
   fi
 
 after_success:
