--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,13 @@ matrix:
     - MATRIX_TYPE=Xcode
     - XCODE_SDK=appletvsimulator12.0
     - XCODE_SCHEME=BuildAllKits_TV
-  - name: "Carthage"
+  - name: "iOS 11.0"
+    osx_image: xcode9.4
+    env:
+    - MATRIX_TYPE=Xcode
+    - XCODE_SDK=iphonesimulator11.0
+    - XCODE_SCHEME=BuildAllKits
+  - name: "Carthage Xcode 10"
     env:
     - MATRIX_TYPE=Carthage
 
