--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,7 @@ Pods/
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 
-Carthage/Checkouts
-Carthage/Build
+Carthage/
 
 
 # fastlane
