--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ jobs:
         skip_cleanup: true
         on:
           tags: true
-          condition: $TRAVIS_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]+($|[-+][0-9A-Za-z+.-]+$)/ # Tag is v0.0.0 format
+          condition: $TRAVIS_TAG =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/ # Tag is v0.0.0 format
           branch: master
 
 before_install:
