--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
 
 stages:
   - test
+  - name: release
+    if: tag IS present
   - name: deploy
     if: tag IS present
 
@@ -30,8 +32,8 @@ jobs:
     - name: "Carthage - Xcode 10.1"
       osx_image: xcode10.1
       if: tag IS blank
-    - stage: deploy
-      name: "Release"
+    - stage: release
+      name: "GitHub"
       osx_image: xcode10.1
       script: sh scripts/run.sh build carthage --archive
       deploy:
@@ -45,6 +47,10 @@ jobs:
           tags: true
           condition: $TRAVIS_TAG =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/ # Tag is v0.0.0 format
           branch: master
+    - stage: deploy
+      name: "Cocoapods"
+      osx_image: xcode10.1
+      script: sh scripts/run.sh release cocoapods --allow-warnings
 
 before_install:
   - brew update
