--- a/.travis.yml
+++ b/.travis.yml
@@ -1,87 +1,72 @@
 language: objective-c
 os: osx
-osx_image: xcode10
 
 env:
   global:
-  - SCRIPT_ENV=TRAVISCI
-  - XCODE_WORKSPACE=FacebookSDK.xcworkspace
+    - XCODE_WORKSPACE=FacebookSDK.xcworkspace
 
-matrix:
+stages:
+  - test
+  - name: release
+    if: tag IS present
+  - name: deploy
+    if: tag IS present
+
+jobs:
   include:
-  - name: "iOS 12.0"
-    env:
-    - MATRIX_TYPE=Xcode
-    - XCODE_SDK=iphonesimulator12.0
-    - XCODE_SCHEME=BuildAllKits
-  - name: "tvOS 12.0"
-    env:
-    - MATRIX_TYPE=Xcode
-    - XCODE_SDK=appletvsimulator12.0
-    - XCODE_SCHEME=BuildAllKits_TV
-  - name: "iOS 11.0"
-    osx_image: xcode9.4
-    env:
-    - MATRIX_TYPE=Xcode
-    - XCODE_SDK=iphonesimulator11.4
-    - XCODE_SCHEME=BuildAllKits
-  - name: "Carthage Xcode 10"
-    env:
-    - MATRIX_TYPE=Carthage
-
-branches:
-  only:
-  - master
+    - name: 'Xcode - iOS 12.0'
+      osx_image: xcode10.1
+      env:
+        - XCODE_SDK=iphonesimulator12.1
+        - XCODE_SCHEME=BuildAllKits
+    - name: 'Xcode - tvOS 12.0'
+      osx_image: xcode10.1
+      env:
+        - XCODE_SDK=appletvsimulator12.1
+        - XCODE_SCHEME=BuildAllKits_TV
+    - name: 'Xcode - iOS 11.4'
+      osx_image: xcode9.4
+      env:
+        - XCODE_SDK=iphonesimulator11.4
+        - XCODE_SCHEME=BuildAllKits
+    - name: 'Carthage - Xcode 10.1'
+      osx_image: xcode10.1
+      if: tag IS blank
+    - stage: release
+      name: 'GitHub'
+      osx_image: xcode10.1
+      script: sh scripts/run.sh build carthage --archive
+      deploy:
+        provider: releases
+        api_key:
+          secure: 'vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE='
+        file: Carthage/Release/*
+        file_glob: true
+        skip_cleanup: true
+        on:
+          tags: true
+          condition:
+            $TRAVIS_TAG =~
+            /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
+          branch: master
+    - stage: deploy
+      name: 'Cocoapods'
+      osx_image: xcode10.1
+      script: sh scripts/run.sh release cocoapods --allow-warnings
 
 before_install:
-- echo "Will update Brew"
-- brew update
+  - brew update
 
 install:
-- echo "Will Bundle Brew"
-- bundle install
-- brew bundle
+  - bundle install
+  - brew bundle
 
 before_script:
-- echo "Will start scripts"
+  - sh scripts/test_scripts.sh
 
 script:
-- echo "Did start scripts"
-- echo "Env $SCRIPT_ENV $TEST_GLOBAL $MATRIX_TYPE $XCODE_SDK $XCODE_SCHEME $XCODE_DESTINATION"
-- |
-  if [ "$MATRIX_TYPE" = Carthage ]; then
-    carthage build --no-skip-current
-  elif [ "$MATRIX_TYPE" = Xcode ]; then
-    xcodebuild build \
-      -workspace $XCODE_WORKSPACE \
-      -sdk $XCODE_SDK \
-      -scheme $XCODE_SCHEME \
-      -configuration Debug | \
-      xcpretty
-  fi
-
-after_success:
-- echo "Did succeed"
-
-after_failure:
-- echo "Did fail"
-
-after_script:
-- echo "Did complete scripts"
-
-before_deploy:
-- echo "Will deploy"
-- test $TRAVIS_TEST_RESULT = 0
-
-deploy:
-- provider: script
-  script: echo "Should deploy"
-  on:
-    tags: true
-    branch: master
-
-after_deploy:
-- echo "Did deploy"
+  - BUILD_TYPE=$(echo "$TRAVIS_JOB_NAME" | awk '{print $1}' | tr '[:upper:]' '[:lower:]')
+  - sh scripts/run.sh build $BUILD_TYPE $XCODE_WORKSPACE $XCODE_SDK $XCODE_SCHEME
 
 notifications: # set notification options
   email:
@@ -91,4 +76,7 @@ notifications: # set notification options
       - codytwinton@fb.com
   # Enable webhooks later
   # webhooks:
-    # on_failure: always
+  # on_failure: always
+
+after_deploy:
+  - echo "Did deploy"
