--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ os: osx
 env:
   global:
     - XCODE_WORKSPACE=FacebookSDK.xcworkspace
+    - secure: 'vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE='
 
 stages:
   - test
@@ -45,9 +46,7 @@ jobs:
         skip_cleanup: true
         on:
           tags: true
-          condition:
-            $TRAVIS_TAG =~
-            /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
+          condition: $TRAVIS_TAG =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
           branch: master
     - stage: deploy
       name: 'Cocoapods'
