--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
     - secure: 'vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE='
 
 stages:
+  - name: canrelease
+    if: $(sh "$PWD"/scripts/run.sh can-release-current)
   - test
   - name: release
     if: tag IS present
