--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,13 @@ os: osx
 env:
   global:
     - XCODE_WORKSPACE=FacebookSDK.xcworkspace
+    - CAN_RELEASE=$(sh scripts/run.sh can-release-current)
     - secure: 'vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE='
 
 stages:
   - test
   - name: canrelease
-    if: $(sh "$PWD"/scripts/run.sh can-release-current)
+    if: env(CAN_RELEASE)
   - name: release
     if: tag IS present
   - name: publish
