--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,16 @@ os: osx
 env:
   global:
     - XCODE_WORKSPACE=FacebookSDK.xcworkspace
-    - CAN_RELEASE=$(! sh scripts/run.sh can-release-current)
     - secure: 'vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE='
 
 stages:
   - test
-  - name: canrelease
-    if: env(CAN_RELEASE) = true
+  - name: tag
+    if: tag IS blank
   - name: release
-    if: tag IS present
+    if: tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
   - name: publish
-    if: tag IS present
+    if: tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
 
 jobs:
   include:
@@ -36,10 +35,10 @@ jobs:
     - name: 'Carthage - Xcode 10.1'
       osx_image: xcode10.1
       if: tag IS blank
-    - stage: canrelease
-      name: 'The Test of Jobs'
+    - stage: tag
+      name: 'Tag Version'
       osx_image: xcode10.1
-      script: echo "Worked here"
+      script: sh scripts/run.sh tag-push-current-version
     - stage: release
       name: 'GitHub'
       osx_image: xcode10.1
@@ -51,10 +50,6 @@ jobs:
         file: Carthage/Release/*
         file_glob: true
         skip_cleanup: true
-        on:
-          tags: true
-          condition: $TRAVIS_TAG =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
-          branch: master
     - stage: publish
       name: 'Cocoapods'
       osx_image: xcode10.1
