--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ stages:
     if: '! tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/'
   - name: release
     if: tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
-  - name: publish
-    if: tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
 
 jobs:
   include:
@@ -45,16 +43,14 @@ jobs:
       osx_image: xcode10.1
       script: sh scripts/run.sh build carthage --archive
       deploy:
-        provider: releases
-        api_key:
-          secure: vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE=
-        file: Carthage/Release/*
-        file_glob: true
-        skip_cleanup: true
-    - stage: publish
-      name: Cocoapods
-      osx_image: xcode10.1
-      script: sh scripts/run.sh release cocoapods --allow-warnings
+        - provider: releases
+          skip_cleanup: true
+          api_key:
+            secure: vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE=
+          file: Carthage/Release/*
+          file_glob: true
+        - provider: script
+          script: sh scripts/run.sh release cocoapods --allow-warnings
 
 before_install:
   - brew update
