--- a/.travis.yml
+++ b/.travis.yml
@@ -50,20 +50,19 @@ jobs:
             secure: vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE=
           file: Carthage/Release/*
           file_glob: true
+          name: 'Facebook SDK: ${CURRENT_VERSION}'
+          body: Consult Changelog
           on:
             all_branches: true
-            condition:
-              tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
         - provider: script
           script: sh scripts/run.sh release cocoapods --allow-warnings
           on:
             all_branches: true
-            condition:
-              tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
 
 before_install: sh scripts/travis/before_install.sh
 install: sh scripts/travis/install.sh
 script: sh scripts/travis/script.sh
+before_deploy: sh scripts/travis/before_deploy.sh
 
 notifications: # set notification options
   email:
