--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
     - stage: test
       name: Pod Lint - Xcode 10.1
       osx_image: xcode10.1
-      script: sh scripts/run.sh lint podspecs
+      script: sh scripts/run.sh lint cocoapods
     # - stage: tag
     #   name: Tag Version
     #   osx_image: xcode10.1
