--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ os: osx
 
 env:
   global:
+    # $api_key
+    - secure: vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE=
+    # $COCOAPODS_TRUNK_TOKEN
+    - secure: mpObzf4FG+JHEN6Gm/Jp96pLONe4nYpgtXxkRLlULlD23c6aHAwMJhT/pjYKINmBmxd0/Vnw5LVvBcU0rCrjANFn4nfotP4KoexIO4As+wjRGAmd9IUvosio9zdv1DasUZlHliyPElfsbKqK3aZjBDw1Cx99t6dog0H6aIKUOQA=
     - XCODE_WORKSPACE=FacebookSDK.xcworkspace
-    - secure: vjVOdxnuHnkDiPXoddLycTQ2WwbYudHU53xbaz86Su0J+xTSNDmxmd2GFn45EMn5BixwVzTnLWhDg7EvNvQhHWDAuHUaK7X/KXoR41s3PzlucWtxczxxt3eIRtk7U4y22tSwr/r1cl6Q2QM5IK8ICZshhSyiHHEz/EAaodcJkUE= # $api_key=VALUE
-    - secure: mpObzf4FG+JHEN6Gm/Jp96pLONe4nYpgtXxkRLlULlD23c6aHAwMJhT/pjYKINmBmxd0/Vnw5LVvBcU0rCrjANFn4nfotP4KoexIO4As+wjRGAmd9IUvosio9zdv1DasUZlHliyPElfsbKqK3aZjBDw1Cx99t6dog0H6aIKUOQA= # $COCOAPODS_TRUNK_TOKEN=VALUE
+    - GITHUB_ACCESS_TOKEN=$api_key
 
 branches:
   only:
@@ -58,7 +61,7 @@ jobs:
       deploy:
         - provider: releases
           skip_cleanup: true
-          api_key: $api_key
+          api_key: $GITHUB_ACCESS_TOKEN
           file: Carthage/Release/*
           file_glob: true
           name: Facebook SDK $TRAVIS_TAG
