Allow warnings for Cocoapods linting

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ jobs:
     - stage: test
       name: Pod Lint - Xcode 10.1
       osx_image: xcode10.1
-      script: sh scripts/run.sh lint cocoapods
+      script: sh scripts/run.sh lint cocoapods --allow-warnings
     # - stage: tag
     #   name: Tag Version
     #   osx_image: xcode10.1
