--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
     - stage: test
       name: Pod Lint - Xcode 10.2
       osx_image: xcode10.2
-      script: sh scripts/run.sh lint cocoapods
+      script: sh scripts/run.sh lint cocoapods --allow-warnings
     # - stage: tag
     #   name: Tag Version
     #   osx_image: xcode10.2
