--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,10 @@ jobs:
       name: Pod Lint - Xcode 10.3
       osx_image: xcode10.3
       script: sh scripts/run.sh lint cocoapods --allow-warnings
+    - stage: test
+      name: Swift Lint
+      osx_image: xcode10.3
+      script: sh scripts/run.sh lint swift
     # - stage: tag
     #   name: Tag Version
     #   osx_image: xcode10.2
@@ -119,7 +123,7 @@ notifications: # set notification options
     on_success: change
     on_failure: always
     recipients:
-      - codytwinton@fb.com
+      - joesusnick@fb.com
       - dreamolight@fb.com
   # Enable webhooks later
   # webhooks:
