--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ stages:
     if: '! tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/'
   # - name: tag
   #   if: '! tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/'
+  - name: prepare-release
+    if: tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
   - name: release
     if: tag =~ /^v([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)\.([0-9]{1}|[1-9][0-9]+)($|[-+][0-9A-Za-z+.-]+$)/
 
@@ -63,7 +65,7 @@ jobs:
     #   name: Tag Version
     #   osx_image: xcode10.2
     #   script: sh scripts/run.sh tag-current-version --push
-    - stage: release
+    - stage: prepare-release
       name: GitHub Release
       osx_image: xcode10.1
       script: sh scripts/run.sh release github
@@ -78,7 +80,7 @@ jobs:
         on:
           all_branches: true
           tags: true
-    - stage: release
+    - stage: prepare-release
       name: GitHub Release Swift
       osx_image: xcode10.3
       script: sh scripts/run.sh release github swift
