Treat Swift variation on FBSDKCoreKit as primary for SPM

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Facebook.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Facebook.xcscheme
@@ -34,6 +34,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FBSDKCoreKitObjC"
+               BuildableName = "FBSDKCoreKitObjC"
+               BlueprintName = "FBSDKCoreKitObjC"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
