--- a/FBSDKLoginKit/FBSDKLoginKit.xcodeproj/xcshareddata/xcschemes/FBSDKLoginKit-Dynamic.xcscheme
+++ b/FBSDKLoginKit/FBSDKLoginKit.xcodeproj/xcshareddata/xcschemes/FBSDKLoginKit-Dynamic.xcscheme
@@ -28,9 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9D9DB8E31A114E500086167B"
+               BuildableName = "FBSDKLoginKitTests.xctest"
+               BlueprintName = "FBSDKLoginKitTests"
+               ReferencedContainer = "container:FBSDKLoginKit.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -51,8 +59,6 @@
             ReferencedContainer = "container:FBSDKLoginKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
