--- a/FBSDKShareKit/FBSDKShareKit.xcodeproj/xcshareddata/xcschemes/FBSDKShareKit_TV-Universal.xcscheme
+++ b/FBSDKShareKit/FBSDKShareKit.xcodeproj/xcshareddata/xcschemes/FBSDKShareKit_TV-Universal.xcscheme
@@ -3,20 +3,34 @@
    LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
+      parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8144D8E81D261D2900C8E4AC"
-               BuildableName = "FBSDKShareKit.framework"
-               BlueprintName = "FBSDKShareKit_TV-Dynamic"
+               BlueprintIdentifier = "9D6DEEFA1BC2E546001A94ED"
+               BuildableName = "FBSDKCoreKit_TV-Universal"
+               BlueprintName = "FBSDKCoreKit_TV-Universal"
+               ReferencedContainer = "container:../FBSDKCoreKit/FBSDKCoreKit.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9D2D99BE1BC456B200929E76"
+               BuildableName = "FBSDKShareKit_TV-Universal"
+               BlueprintName = "FBSDKShareKit_TV-Universal"
                ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,6 +41,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "9D2D99BE1BC456B200929E76"
+            BuildableName = "FBSDKShareKit_TV-Universal"
+            BlueprintName = "FBSDKShareKit_TV-Universal"
+            ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
@@ -43,9 +66,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8144D8E81D261D2900C8E4AC"
-            BuildableName = "FBSDKShareKit.framework"
-            BlueprintName = "FBSDKShareKit_TV-Dynamic"
+            BlueprintIdentifier = "9D2D99BE1BC456B200929E76"
+            BuildableName = "FBSDKShareKit_TV-Universal"
+            BlueprintName = "FBSDKShareKit_TV-Universal"
             ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -56,15 +79,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8144D8E81D261D2900C8E4AC"
-            BuildableName = "FBSDKShareKit.framework"
-            BlueprintName = "FBSDKShareKit_TV-Dynamic"
-            ReferencedContainer = "container:FBSDKShareKit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
