--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,10 @@ jobs:
       osx_image: xcode10.3
       script: sh scripts/run.sh lint cocoapods
     - stage: test
+      name: Pod Lint Static - Xcode 10.3
+      osx_image: xcode10.3
+      script: sh scripts/run.sh lint cocoapods --use-libraries
+    - stage: test
       name: Swift Lint
       osx_image: xcode10.3
       script: sh scripts/run.sh lint swift
