--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ jobs:
     - stage: test
       name: Pod Lint Static - Xcode 10.3
       osx_image: xcode10.3
-      script: sh scripts/run.sh lint cocoapods --use-libraries
+      script: sh scripts/run.sh lint cocoapods --use-libraries --no-clean
     - stage: test
       name: Swift Lint
       osx_image: xcode10.3
